// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > renders with default props 1`] = `
<div
  class="w-full"
>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="flex-1 bg-gray-200 rounded-full overflow-hidden h-2"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="h-full transition-all duration-300 ease-in-out rounded-full bg-blue-600"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar > renders with label 1`] = `
<div
  class="w-full"
>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="flex-1 bg-gray-200 rounded-full overflow-hidden h-2"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="h-full transition-all duration-300 ease-in-out rounded-full bg-blue-600"
        role="progressbar"
        style="width: 75%;"
      />
    </div>
    <div
      class="text-xs text-mute font-medium min-w-[3rem] text-right"
    >
      75
      %
    </div>
  </div>
</div>
`;

exports[`ProgressRing > renders with default props 1`] = `
<div
  class="relative inline-flex items-center justify-center"
>
  <svg
    class="transform -rotate-90"
    height="40"
    width="40"
  >
    <circle
      cx="20"
      cy="20"
      fill="none"
      r="18"
      stroke="#e5e7eb"
      stroke-width="4"
    />
    <circle
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="transition-all duration-300 ease-in-out"
      cx="20"
      cy="20"
      fill="none"
      r="18"
      role="progressbar"
      stroke="#3b82f6"
      stroke-dasharray="113.09733552923255"
      stroke-dashoffset="56.548667764616276"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`ProgressRing > renders with label 1`] = `
<div
  class="relative inline-flex items-center justify-center"
>
  <svg
    class="transform -rotate-90"
    height="40"
    width="40"
  >
    <circle
      cx="20"
      cy="20"
      fill="none"
      r="18"
      stroke="#e5e7eb"
      stroke-width="4"
    />
    <circle
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="transition-all duration-300 ease-in-out"
      cx="20"
      cy="20"
      fill="none"
      r="18"
      role="progressbar"
      stroke="#3b82f6"
      stroke-dasharray="113.09733552923255"
      stroke-dashoffset="28.27433388230814"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <div
    class="absolute inset-0 flex items-center justify-center"
  >
    <span
      class="text-xs font-medium text-fg"
    >
      75
      %
    </span>
  </div>
</div>
`;
